# amortissement_calculator

./: CMakeLists.txt  amortissement_degressif.cpp  amortissement_lineaire.cpp  back.qrc  barChart.qrc  bar_64.qrc  calendar.qrc  db_manager.cpp  db_manager.h  download.qrc  list.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  material.qrc  materiel.cpp  materiel.h  next.qrc  right_.qrc  sigma.qrc  stat.qrc  time.qrc  timer.qrc  titleIcon.qrc  title_.qrc
database/: amortissement.db
icons/: files.qrc  img.qrc
